WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247991
[iOS] PiP-then-Fullscreen results in broken controls in fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=247991
Summary
[iOS] PiP-then-Fullscreen results in broken controls in fullscreen mode
Jer Noble
Reported
2022-11-16 12:43:00 PST
[iOS] PiP-then-Fullscreen results in broken controls in fullscreen mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-11-16 12:43:02 PST
<
rdar://problem/100442052
>
Jer Noble
Comment 2
2022-11-16 12:50:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6560
EWS
Comment 3
2022-11-17 16:47:10 PST
Committed
256812@main
(82b82f5d1af6): <
https://commits.webkit.org/256812@main
> Reviewed commits have been landed. Closing PR #6560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug