Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.h
@@ -107,6 +107,7 @@ private:
     void handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) final;
 
     void setElement(WebCore::Element&);
+    void clearElement();
 
 #if ENABLE(VIDEO)
     void scheduleTextRecognitionForMainVideo();
